--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Drink Water</title>
+  <script defer src="popup.js"></script>
+</head>
+
+
+<body>
+  <button id="btn">set alarm</button>
+</body>
+
+</html>
+
+<!--
 <html>
   <head>
     <link rel="stylesheet" href="button.css">
@@ -8,3 +25,4 @@
     <script src="popup.js"></script>
   </body>
 </html>
+-->
