--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,11 @@
 
   <u><h4>Our Recommendation:</h4></u>
 
-  <button id="btn">Set all reminders with suggested values</button>
+  <button id="btn" title="Set all reminders with default suggested values (30 min waterbreak, 1 hour screen breaks, poromodo setup, and 11pm sleep)">
+    Set all reminders with suggested values
+  </button>
+  <div id="exp">(hover over the button to see description)</div>
+
   <u><h4 class="separate">Choose Your Intervals:</h4></u>
 
   <button id="water_break">Set your Water Break interval (in min)</button>
